frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsa-frontend
  namespace: fsa
spec:
  selector:
    app: fsa-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
